# dtu-robocup-24

./: CMakeLists.txt  LICENSE  README.md  package.xml
dtu_robocup_24/: __init__.py
dtu_robocup_24/image/: ArUco.py  __init__.py  ball_detection.py  yolo_processor.py
dtu_robocup_24/plans/: 3rd_PackageDelivery.py  4th_3gate.py  6th_tunnel.py  7th_racetrack.py  TestTask.py  __init__.py  axegate.py  minigolf.py  package_delivery.py  ramp.py  seesaw.py  start.py
resources/default/: default_processor.yaml
resources/launch/: processor.launch.py
resources/launch/components/: plan.launch.py  processor.launch.py
resources/launch/stacks/: client.launch.py  server.launch.py
scripts/: image_processor  plan  plan_template.py
